test hataları düzeltildi ve proje build edildi